--- a/src/app/product-recent/product-recent.component.css
+++ b/src/app/product-recent/product-recent.component.css
@@ -14,16 +14,11 @@
     vertical-align: middle;
     text-indent: 17px;
 }
-.product-item{
+/* .product-item{
     max-width: 178.5px; 
     max-height: 300px;
-}
+} */
 .container{
     margin-bottom: 30px;
 }
 
-.owl-carousel{
-    display: flex !important;  
-    flex-direction: row;   
-    justify-content: left; 
-}
