--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -176,7 +176,7 @@
       <h2 class="block__header__title">SẢN PHẨM VỪA XEM</h2>
     </div>
    </div>
-   <div id="productTabContent" class="tab-content">
+   <div id="productTabContent" class="">
     <div class="tab-pane active in" id="computer">
       <div class="featured-pro">
         <div class="slider-items-products">
