--- a/src/assets/css/shortcodes/shortcodes.css
+++ b/src/assets/css/shortcodes/shortcodes.css
@@ -278,8 +278,8 @@
 }
 .but_medium2 {
 	color: #fff;
-	padding: 5px 10px;
-	background-color: #04ace2;
+	padding: 9px 19px;
+	background-color: #197bb7;
 	border-radius: 30px;
 	transition: all 0.3s ease;
 	border-bottom: 1px solid #000;
