--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -52,3 +52,28 @@
 .background-review{
     background: seashell;
 }
+
+.owl-carousel.owl-drag .owl-item {
+ display: block;
+ width: auto !important;
+}
+
+.owl-stage .owl-item {
+    display: block;
+    width: auto !important;
+   }
+
+
+   /**/
+
+.slick-slider {
+   /* float: left; */
+  }
+  
+body .slick-prev, 
+body .slick-next {
+    /* height: 45px;
+    width: 40px;
+    background: grey !important;
+    z-index: 100; */
+}
