--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,6 @@
 @import url('src/assets/css/shortcodes/post.css');
 @import url('src/assets/css/style.css');
 @import url('src/assets/css/responsive.css');
+
+@import url('src/assets/css/product-slider.css');
+
