--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,15 +72,15 @@
 
   <!-- All products-->
   <div class="container">
-    <div class="home-tab">
+    <div class="">
       <div class="block__header">
         <h2 class="block__header__title">SẢN PHẨM BÁN CHẠY</h2>
       </div>
-      <div id="productTabContent" class="tab-content">
-        <div class="tab-pane active in" id="computer">
+      <div id="productTabContent" class="">
+        <div class="" id="computer">
           <!-- <div class="featured-pro"> -->
           <!-- <div class="slider-items-products"> -->
-          <div id="computer-slider" class="product-flexslider hidden-buttons home__product">
+          <div id="computer-slider" class="home__product">
             <!-- <owl-carousel-o [options]="customBestSaleProduct">
               <ng-container *ngFor="let item of listProductBestSelling?.data">
                 <ng-template carouselSlide [id]="item.id.toString()"> -->
