--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -13,7 +13,7 @@
     margin-bottom: 16px;
 }
 
-.home__tnc__intro {
+.home__intro {
     display: flex;
     background: #29324e;
     justify-content: space-between;
