--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -102,9 +102,51 @@
 
 @media screen and (max-width: 1024px) {
 
-  
-	  .div-view-extra{
-		margin-top: 25px;
-		  font-size: 14px;
-	  }
-  }
+
+}
+
+
+.slick-prev{
+	margin-left: 26px;
+}
+	
+.slick-next{
+	margin-right: 26px;
+}
+
+.slick-prev, .slick-next {
+    position: absolute;
+    display: block;
+    height: 25px;
+    width: 25px;
+    line-height: 0px;
+    font-size: 0px;
+    cursor: pointer;
+    background: #99a0ad;;
+    color: transparent;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding: 0;
+    border: none;
+    outline: none;
+	opacity: .8;
+	height: 40px;
+    width: 40px;
+    top: calc(50% - 20px);
+	z-index: 999;
+}
+.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
+    outline: none;
+    background:  #99a0ad;;
+    color: transparent;
+}
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 30px;
+    line-height: 1;
+    color: white;
+    opacity: 0.75;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+	
+}
