--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -465,10 +465,6 @@ footer h3 {
 	margin: 10px 0;
 	padding: 0 12px;
 }
-.home-tab {
-	margin-bottom: 0px;
-	margin-top: 20px;
-}
 .home-nav-tabs > li {
 	margin-bottom: 8px;
 	margin-left: 0;
@@ -1275,9 +1271,10 @@ footer h3 {
 	padding: 0 12px;
 }
 .home-tab {
-	margin-bottom: 0;
-	margin-top: 25px;
+	margin-bottom: 15px;
+    margin-top: 30px;
 	padding: 0;
+	font-size: 14px;
 }
 .home-nav-tabs > li {
 	margin-left: 0px;
